<resources>
    <string name="app_name">Contador</string>


    <string name="increment">Incrementar</string>
    <string name="decrement">Decrementar</string>
    <string name="reset">Reiniciar</string>
    <string name="counter">Contador:</string>
    <string name="result">Resultado</string>
    <string name="negative">Permite números negativos</string>
    <string name="label2">Valor por defecto</string>
</resources>