<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/cB_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative"
                android:checked="true"
                />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_increment"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/increment"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_decrement"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/decrement"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button_reset"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textSize="13sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/counter"
                android:textAlignment="textEnd"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/result"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/label_default_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label2"
                android:labelFor="@id/default_counter"
                android:textAlignment="viewEnd" />

            <EditText
                android:id="@+id/default_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>
            <!--android:autofillHints="numberSigned" // the type of content you want-->

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>